# Yandex_Practicum_DL_Engineer_2026_stream3

./: .gitignore  README.md  pyproject.toml  stream3_handson_project.ipynb
inlessons_notebooks/: 00_cnn_starter.ipynb  01_leNet.ipynb  02_AlexNet.ipynb  03_ResNet.ipynb  04_cnn_classifier_e2e.ipynb  05_depthwise_block.ipynb  06_cnn_hands_on.ipynb  07_transfer_learning_freeze_weights.ipynb  11_preproc_datasets_n_dataloaders.ipynb  12_cnn_model_4_transfer_learning.ipynb  13_classifier_training.ipynb  14_results_assesments.ipynb
